<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbackground11"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/eeatandeatmodel"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:gravity="fill_vertical"
            android:id="@+id/txtscreen"
            android:text="@string/txtScreen"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="3">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignUp"
            android:drawableEnd="@drawable/log_in_35497_960_720"
            android:shadowColor="@android:color/black"
            android:text="@string/ng_nh_p"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/btnSignInWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignUpWithFacebook"
            android:drawableEnd="@drawable/fbicon"
            android:text="@string/ng_nh_p_b_ng_t_i_kho_n_facebook"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/btnSignActive"
            android:drawableEnd="@drawable/register"
            android:text="@string/ng_k_t_i_kho_n"
            android:textColor="@android:color/white" />

    </LinearLayout>



</RelativeLayout>